Fix layer modal layout issue

--- a/src/components/mapOverlays/LayerModal.css
+++ b/src/components/mapOverlays/LayerModal.css
@@ -319,7 +319,8 @@ ion-modal#layerModalContainer::part(content) {
   --background-focused: unset;
   --padding-end: 3px;
   --padding-start: 3px;
-  height: 20px;
+  height: 28px;
+  min-height: 28px;
   margin: 1px;
 }
 #layerModalContainer .toggleButton.ion-focused {
